Add web pack build in base-foundation

--- a/themes/base-foundation/templates/layout/base.twig
+++ b/themes/base-foundation/templates/layout/base.twig
@@ -10,7 +10,8 @@
 
     {% include 'layout/components/flash-messages.twig' %}
 
-    {% include 'layout/base/scripts.twig' %}
     {% include 'layout/base/footer.twig' %}
+
+    <script type="text/javascript" src="/assets/app.js"></script>
 </body>
 </html>
