--- a/themes/base-foundation/templates/layout/base/head.twig
+++ b/themes/base-foundation/templates/layout/base/head.twig
@@ -6,5 +6,4 @@
 <link rel="shortcut icon" href="/favicon.ico"/>
 <link rel="canonical" href="{{ canonicalUrl }}"/>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.css">
-<link rel="stylesheet" href="/s?p=main.scss&formatter=compact">
+<link rel="stylesheet" href="/assets/css/style.css">
