--- a/themes/base-foundation/templates/layout/base/topbar.twig
+++ b/themes/base-foundation/templates/layout/base/topbar.twig
@@ -1,29 +1,16 @@
 <nav class="top-bar">
-    <div class="top-bar-title">
-    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-      <button class="menu-icon dark" type="button" data-toggle></button>
-    </span>
-        <strong>Site Title</strong>
-    </div>
-    <div id="responsive-menu">
+    <div>
         <div class="top-bar-left">
-            <ul class="dropdown menu" data-dropdown-menu>
-                <li>
-                    <a href="#">One</a>
-                    <ul class="menu vertical">
-                        <li><a href="#">One</a></li>
-                        <li><a href="#">Two</a></li>
-                        <li><a href="#">Three</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
+            <ul class="menu">
+                <li><a href="#"><strong>{{ SITE_NAME | default('Kommerce') }}</strong></a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
             </ul>
         </div>
         <div class="top-bar-right">
             <ul class="menu">
-                <li><input type="search" placeholder="Search"></li>
-                <li><button type="button" class="button">Search</button></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
             </ul>
         </div>
     </div>
