Adding base theme. Adding asset management.

--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -317,7 +317,7 @@
                                         </select>
                                     </div>
                                     <div class="span6" id="accepted-cards">
-                                        <img src="/asset/kohana-kommerce/img/cards.png" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
+                                        <img src="/a/base/img/cards.png" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
                                     </div>
                                 </div>
                             </div>
