--- a/themes/base-bootstrap/templates/cart/added.twig
+++ b/themes/base-bootstrap/templates/cart/added.twig
@@ -20,12 +20,7 @@
                             <div class="product-name">{{ cartItem.product.name }}</div>
                         </a>
 
-                        {# TODO:
-                            <?=View::factory('helper/rating_stars_static')->set([
-                            'rating' => $cartItem->product->rating,
-                            'count' => FALSE,
-                            ])?>
-                        #}
+                        {% embed "helper/rating_stars.twig" with {'rating': cartItem.product.rating } only %}{% endembed %}
 
                         <div class="pull-right">Quantity in cart: {{ cartItem.quantity }}</div>
 
