--- a/themes/base-bootstrap/templates/helper/product_grid.twig
+++ b/themes/base-bootstrap/templates/helper/product_grid.twig
@@ -10,9 +10,8 @@
     <a href="{{ productUrl(product) }}">
         <div class="product-name">{{ product.name }}</div>
     </a>
-    {# TODO:
-        <?=View::factory('helper/rating_stars_static')->set('rating', $product->rating)?>
-    #}
+
+    {% embed "helper/rating_stars.twig" with {'rating': product.rating } only %}{% endembed %}
 
     {% if product.isInStock %}
         <div class="availability">
