Add remaining foundation layouts stripped of excess markup.

--- a/themes/base-foundation/templates/layout/base/topbar.twig
+++ b/themes/base-foundation/templates/layout/base/topbar.twig
@@ -1,17 +1,7 @@
-<nav class="top-bar">
-    <div>
-        <div class="top-bar-left">
-            <ul class="menu">
-                <li><a href="#"><strong>{{ SITE_NAME | default('Kommerce') }}</strong></a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-            </ul>
-        </div>
-        <div class="top-bar-right">
-            <ul class="menu">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-            </ul>
-        </div>
-    </div>
+<nav>
+    <ul class="menu">
+        <li><a href="#">{{ SITE_NAME | default('Kommerce') }}</a></li>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+    </ul>
 </nav>
