--- a/themes/base-foundation/templates/product/show.twig
+++ b/themes/base-foundation/templates/product/show.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <h3>{{ product.name | default('Product Name Not Found') }}</h3>
+    <h2>{{ product.name | default('Product Name Not Found') }}</h2>
 
     <ul>
         <li>{{ product.price.quantityPrice | displayPrice }}</li>
@@ -35,31 +35,17 @@
 
     {% if product.isInStock %}
         <form action="/cart/add-item" id="cart_add_item" method="post">
-
         <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
-    {% endif %}
-
-    {#{% if product.options is not empty or product.textOptions is not empty %}#}
-    {#{% for option in product.options %}#}
-    {#{% embed "product/parts/options.twig" with {'option': option } only %}#}
-    {#{% endembed %}#}
-    {#{% endfor %}#}
-    {#{% endif %}#}
-
-    {% if product.isInStock %}
         <input type="hidden" name="id" value="{{ product.id.getHex() }}"/>
-        <div class="input-group">
-            <span class="input-group-label">Qty:</span>
-            <input class="input-group-field" name="quantity" type="number" value="1">
-            <div class="input-group-button">
-                <input type="submit" class="button" value="Add to Cart">
-            </div>
+            <span>Qty:</span>
+            <input name="quantity" type="number" value="1">
+            <input type="submit" class="button" value="Add to Cart">
         </div>
         </form>
     {% endif %}
 
     {% if relatedProducts is not empty %}
-        <h2 class="text-center">You Might Also Like</h2>
+        <h2>You Might Also Like</h2>
 
         {% embed "helpers/related-products-grid.twig" with {'products': relatedProducts } only %}
         {% endembed %}
