--- a/themes/base-foundation/templates/helpers/related-products-grid.twig
+++ b/themes/base-foundation/templates/helpers/related-products-grid.twig
@@ -1,23 +1,19 @@
 {% for product in products %}
-    <a href="{{ productUrl(product) }}">
-        <div class="media-object">
-            <div class="media-object-section">
-                <div class="thumbnail">
-                    {% if product.defaultImage is empty %}
-                        <img src="//placehold.it/100x100">
-                    {% else %}
-                        <img src="{{ product.defaultImage }}">
-                    {% endif %}
-                </div>
-            </div>
-            <div class="media-object-section">
-                <h4>{{ product.name }}</h4>
-                {% if product.isInStock %}
-                    <p>Out of Stock</p>
-                {% elseif product.isPriceVisible %}
-                    <p>{{ product.price.quantityPrice | displayPrice }}</p>
-                {% endif %}
-            </div>
-        </div>
-    </a>
+
+    <h4>{{ product.name }}</h4>
+
+    <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
+
+    {% if product.defaultImage is empty %}
+        <img src="//placehold.it/100x100">
+    {% else %}
+        <img src="{{ product.defaultImage }}">
+    {% endif %}
+
+    {% if product.isInStock %}
+        <p>Out of Stock</p>
+    {% elseif product.isPriceVisible %}
+        <p>{{ product.price.quantityPrice | displayPrice }}</p>
+    {% endif %}
+
 {% endfor %}
